...
sealed class NavigationItem(
    val route: String,
    val icon: ImageVector,
    val label: String
) {
    object Library : NavigationItem("main", Icons.Default.Home, "Library")
    object AddBook : NavigationItem("add", Icons.Default.Add, "Add Book")
    object ReadBooks : NavigationItem("read", Icons.Default.CheckCircle, "Read Books")
}

@Composable
fun BottomNavBar(navController: NavHostController) {
    val items = listOf(
...
